# IA_Embebida

./: README.md  run_presentation.sh
clases/: clases.html  seccion01_presentacion.html  seccion02_introduccion_cese.html  seccion03_introduccion_ceia.html  seccion04_introduccion_iae.html  seccion05_compresion.html  seccion06_cuantizacion.html  seccion07_pruning.html  seccion08_factorizacion.html  seccion09_nas.html  seccion10_kd.html  seccion11_ia_embebida.html  seccion12_plataformas.html  seccion13_frameworks.html  seccion14_algoritmos.html  seccion15_despliegue.html  seccion16_aplicaciones.html
clases/figures/: 00_intro-proyecto_ia_diagram.html  00_intro-proyecto_ia_diagram_v1.html  00_intro-proyecto_ia_diagram_v2.html  00_intro-proyecto_ia_diagram_v3.html  02-alexnet_diagram.html  02-architecture_backbone.html  02-architecture_head.html  02-batchnorm_animation.html  02-conv_animation.html  02-dense_layer_diagram.html  02-dropout_animation.html  02-flatten_animation.html  02-inception_diagram.html  02-lenet5_diagram.html  (+9 more)
ejercicios/: .gitignore  pyproject.toml  qkeras_linear.py  script06_utils.py  script06a.py  script06b.py  script06c.py  script06d.py
ejercicios/docker/: Dockerfile.cpu  Dockerfile.cuda  docker-compose.yaml
ejercicios/modelos/: modelo_CNN_imagenes_fashion.h5  modelo_CNN_imagenes_fashionPTQ.h5  modelo_MLP_imagenes_fashion.h5
ejercicios/outputs/: bkp20260313-modelo_MLP_imagenes_fashion_resultados_cuantizacion.json  modelo_CNN_imagenes_fashion_resultados_cuantizacion.json  modelo_MLP_imagenes_fashion_resultados_cuantizacion.json
(+4 files in other folders)
