[project]
name = "eamta-ml-vlsi"
version = "0.1.0"
description = "EAMTA-ML on VLSI Exercise Project"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "tensorflow==2.12.1",
    "keras==2.12.0",
    "qkeras==0.9.0",
    "h5py==3.8.0",
    "numpy==1.24.3",
    "matplotlib>=3.7.1",
    "pandas>=2.0.0",
    "seaborn>=0.12.2",
    "tensorflow-model-optimization==0.8.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "tqdm>=4.65.0",
]

[tool.uv]
managed = true
